tests/neg-custom-args/captures/try.check
-- Error: tests/neg-custom-args/captures/try.scala:23:28 ---------------------------------------------------------------
23 |  val a = handle[Exception, CanThrow[Exception]] { // error
   |                            ^^^^^^^^^^^^^^^^^^^
   |                            Type variable R of method handle cannot be instantiated to box CT[Exception]^ since
   |                            that type captures the root capability `cap`.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try.scala:29:43 ------------------------------------------
29 |  val b = handle[Exception, () -> Nothing] { // error
   |                                           ^
   |                                           Found:    (x: CT[Exception]^) ->? () ->{x} Nothing
   |                                           Required: (x: CT[Exception]^) ->{fresh} () -> Nothing
30 |    (x: CanThrow[Exception]) => () => raise(new Exception)(using x)
31 |  } {
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try.scala:35:18 ------------------------------------------
35 |  val xx = handle {  // error
   |                  ^
   |                  Found:    (x: CT[Exception]^) ->? box () ->{x} Int
   |                  Required: (x: CT[Exception]^) ->{fresh} box () ->? Int
   |
   |                  Note that reference x.type
   |                  cannot be included in outer capture set ?
36 |    (x: CanThrow[Exception]) =>
37 |      () =>
38 |        raise(new Exception)(using x)
39 |        22
40 |  } {
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try.scala:47:31 ------------------------------------------
47 |val global: () -> Int = handle { // error
   |                               ^
   |                               Found:    (x: CT[Exception]^) ->? box () ->{x} Int
   |                               Required: (x: CT[Exception]^) ->{fresh} box () ->? Int
   |
   |                               Note that reference x.type
   |                               cannot be included in outer capture set ?
48 |  (x: CanThrow[Exception]) =>
49 |    () =>
50 |      raise(new Exception)(using x)
51 |      22
52 |} {
   |
   | longer explanation available when compiling with `-explain`
